I have completed the first phase of the project

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "animate.css": "^4.1.1",
     "axios": "^1.11.0",
+    "country-state-city": "^3.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
