--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "country-state-city": "^3.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.7",
