--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "animate.css": "^4.1.1",
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
