--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -28,7 +29,8 @@
     "react-router-dom": "^7.7.1",
     "sonner": "^2.0.7",
     "swiper": "^11.2.10",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
