--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.10",
+    "@codemirror/lang-javascript": "^6.2.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
@@ -18,6 +21,8 @@
     "@mui/material": "^7.2.0",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@uiw/codemirror-theme-okaidia": "^4.25.1",
+    "@uiw/react-codemirror": "^4.25.1",
     "animate.css": "^4.1.1",
     "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
@@ -32,7 +37,9 @@
     "sonner": "^2.0.7",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
-    "toast": "^0.5.4"
+    "toast": "^0.5.4",
+    "react-live": "^4.1.7",
+    "prism-react-renderer": "^2.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
